# dots.ocr

./: README.bmnnit.md  pyproject.toml
demo/: demo_gradio_annotion.py  demo_gradio_batch.py  demo_streamlit.py
docker/: Dockerfile  Dockerfile.cpu  Dockerfile.rocm  Dockerfile.rocm-simple  README-AMD.md  docker-compose.amd.yml  docker-compose.yml
dots_ocr/: parser.py  parser_streaming.py
dots_ocr/model/: inference.py
