[project]
name = "dots-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "flash-attn>=2.8.3",
    "gradio>=5.44.1",
    "gradio-image-annotation>=0.4.0",
    "huggingface-hub>=0.34.4",
    "modelscope>=1.29.2",
    "openai>=1.107.0",
    "pymupdf>=1.26.4",
    "qwen-vl-utils>=0.0.11",
    "streamlit>=1.49.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

